Update example prompt to 3-4 people instead of 6-7

--- a/static/index.html
+++ b/static/index.html
@@ -355,7 +355,7 @@
                 
                 <div class="example">
                     <strong>Example:</strong>
-                    <code>I'm visiting Switzerland for ski season and want to hit the slopes! I got my wife and her family coming along, with our two sons. So it will be 6-7 people. We want to be right close to the ski action! Check this listing: https://www.homegate.ch/rent/4002583790</code>
+                    <code>I'm visiting Switzerland for ski season and want to hit the slopes! I got my wife and her family coming along. So it will be 3-4 people. We want to be right close to the ski action! Check this listing: https://www.homegate.ch/rent/4002583790</code>
                 </div>
             </div>
         </div>
